refactor(#92): remove medium sonar issues