@@ -1,10 +1,13 @@
 package pl.api.itoffers.provider.justjoinit.infrastructure;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import lombok.Data;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.stereotype.Component;
+import pl.api.itoffers.provider.ProviderException;
 
 @ConfigurationProperties(prefix = "application.provider.just-join-it")
 @Component
@@ -24,17 +27,17 @@ public class JustJoinItParameters {
 
   public URL getOrigin() {
     try {
-      return new URL(origin);
-    } catch (MalformedURLException e) {
-      throw new RuntimeException(e);
+      return new URI(origin).toURL();
+    } catch (MalformedURLException | URISyntaxException e) {
+      throw ProviderException.couldNotCreateUrl(e);
     }
   }
 
   public URL getOfferUrl(String slug) {
     try {
-      return new URL(origin + DETAILS_PATH + slug);
-    } catch (MalformedURLException e) {
-      throw new RuntimeException(e);
+      return new URI(origin + DETAILS_PATH + slug).toURL();
+    } catch (MalformedURLException | URISyntaxException e) {
+      throw ProviderException.couldNotCreateUrl(e);
     }
   }
 }
